Source/WebCore/platform/graphics/opengl/GraphicsContextGLOpenGL.cpp
@@ -34,13 +34,16 @@
 #include "ImageBuffer.h"
 #include "MediaPlayerPrivate.h"
 #include "PixelBuffer.h"
+#include <memory>
 #include <wtf/UniqueArray.h>
 
 #if USE(AVFOUNDATION)
 #include "GraphicsContextGLCV.h"
 #endif
 
-#include <memory>
+#if !PLATFORM(COCOA) && ENABLE(MEDIA_STREAM)
+#include "MediaSample.h"
+#endif
 
 namespace WebCore {
 
@@ -70,14 +73,6 @@ void GraphicsContextGLOpenGL::setBuffersToAutoClear(GCGLbitfield buffers)
 GCGLbitfield GraphicsContextGLOpenGL::getBuffersToAutoClear() const
 {
     return m_buffersToAutoClear;
-}
-
-void GraphicsContextGLOpenGL::enablePreserveDrawingBuffer()
-{
-    GraphicsContextGL::enablePreserveDrawingBuffer();
-    // After dynamically transitioning to preserveDrawingBuffer:true
-    // for canvas capture, clear out any buffer auto-clearing state.
-    m_buffersToAutoClear = 0;
 }
 
 #if !USE(ANGLE)
@@ -169,6 +164,13 @@ std::optional<PixelBuffer> GraphicsContextGLOpenGL::paintRenderingResultsToPixel
     }
     return results;
 }
+
+#if !PLATFORM(COCOA) && ENABLE(MEDIA_STREAM)
+RefPtr<MediaSample> GraphicsContextGLOpenGL::paintCompositedResultsToMediaSample()
+{
+    return nullptr;
+}
+#endif
 
 std::optional<PixelBuffer> GraphicsContextGLOpenGL::readRenderingResultsForPainting()
 {
